--- a/MDK-ARM/lab3_oled_dht11/lab3_oled_dht11.build_log.htm
+++ b/MDK-ARM/lab3_oled_dht11/lab3_oled_dht11.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: £gVision V5.38.0.0
 Copyright (C) 2022 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Lin YuCheng, Yuntech, LIC=LMZGF-QDKRD-R18PX-VR21G-YXSRG-4LU7E
+License Information: Lin Yu-Cheng, Yuntech, LIC=53CY4-Z4SJV-9JN6K-CG973-RM735-GM9TJ
  
 Tool Versions:
 Toolchain:       MDK-ARM Community  Version: 5.38.0.0
@@ -21,92 +21,92 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.1.0.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-C:\Users\rs040\Documents\lab3_oled_dht11-main\MDK-ARM\lab3_oled_dht11.uvprojx
-Project File Date:  03/10/2024
+C:\Users\rs040\Documents\lab3_oled_dht11\MDK-ARM\lab3_oled_dht11.uvprojx
+Project File Date:  03/15/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'lab3_oled_dht11'
 assembling startup_stm32f429xx.s...
-compiling usart.c...
-compiling stm32f4xx_hal_timebase_tim.c...
 compiling i2c.c...
-compiling stm32f4xx_hal_msp.c...
 compiling tim.c...
+compiling u8g2_box.c...
 compiling freertos.c...
+compiling stm32f4xx_hal_msp.c...
 compiling gpio.c...
 compiling stm32f4xx_it.c...
+compiling u8g2_arc.c...
+compiling stm32f4xx_hal_timebase_tim.c...
+compiling usart.c...
+compiling u8g2_bitmap.c...
 compiling main.c...
 compiling dht11.c...
 compiling oled.c...
-compiling u8g2_arc.c...
 compiling u8g2_buffer.c...
-compiling u8g2_box.c...
-compiling u8g2_button.c...
-compiling u8g2_bitmap.c...
-compiling u8g2_cleardisplay.c...
-compiling u8g2_d_memory.c...
-compiling u8g2_d_setup.c...
 compiling u8g2_circle.c...
-compiling u8g2_input_value.c...
+compiling u8g2_d_setup.c...
+compiling u8g2_cleardisplay.c...
+compiling u8g2_button.c...
+compiling u8g2_d_memory.c...
 compiling u8g2_hvline.c...
+compiling u8g2_input_value.c...
 compiling u8g2_intersection.c...
-compiling u8g2_line.c...
 compiling u8g2_kerning.c...
+compiling u8g2_line.c...
+compiling u8g2_polygon.c...
 compiling u8g2_message.c...
 compiling u8g2_ll_hvline.c...
-compiling u8g2_polygon.c...
+compiling u8log_u8x8.c...
+compiling u8log.c...
 compiling u8g2_selection_list.c...
 compiling u8g2_font.c...
-compiling u8log.c...
-compiling u8log_u8x8.c...
 compiling u8log_u8g2.c...
-compiling u8g2_setup.c...
 compiling u8x8_capture.c...
+compiling u8g2_setup.c...
 compiling u8x8_d_ssd1306_128x64_noname.c...
+compiling u8x8_byte.c...
 compiling u8x8_8x8.c...
 compiling u8x8_debounce.c...
-compiling u8x8_byte.c...
-compiling u8g2_fonts.c...
-compiling u8x8_cad.c...
-compiling u8x8_gpio.c...
-compiling u8x8_display.c...
-compiling u8x8_input_value.c...
-compiling u8x8_fonts.c...
-compiling u8x8_message.c...
-compiling u8x8_selection_list.c...
-compiling u8x8_setup.c...
-compiling u8x8_u8toa.c...
 compiling u8x8_u16toa.c...
 compiling u8x8_string.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling u8x8_display.c...
+compiling u8x8_fonts.c...
+compiling u8x8_u8toa.c...
+compiling u8x8_selection_list.c...
+compiling u8x8_cad.c...
+compiling u8x8_message.c...
+compiling u8x8_gpio.c...
+compiling u8x8_input_value.c...
+compiling u8x8_setup.c...
+compiling u8g2_fonts.c...
 compiling stm32f4xx_hal_rcc.c...
 compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
 compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_pwr_ex.c...
 compiling stm32f4xx_hal_gpio.c...
 compiling stm32f4xx_hal_pwr.c...
 compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_pwr_ex.c...
 compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal.c...
-compiling stm32f4xx_hal_i2c_ex.c...
 compiling stm32f4xx_hal_exti.c...
-compiling system_stm32f4xx.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_i2c_ex.c...
 compiling croutine.c...
-compiling list.c...
-compiling event_groups.c...
 compiling stm32f4xx_hal_tim_ex.c...
+compiling list.c...
+compiling system_stm32f4xx.c...
+compiling event_groups.c...
+compiling port.c...
+compiling heap_4.c...
 compiling stream_buffer.c...
 compiling timers.c...
-compiling heap_4.c...
 compiling queue.c...
-compiling port.c...
-compiling stm32f4xx_hal_uart.c...
-compiling tasks.c...
-compiling stm32f4xx_hal_tim.c...
 compiling cmsis_os2.c...
+compiling tasks.c...
+compiling stm32f4xx_hal_uart.c...
+compiling stm32f4xx_hal_tim.c...
 compiling stm32f4xx_hal_i2c.c...
 linking...
 Program Size: Code=28616 RO-data=9036 RW-data=20 ZI-data=21420  
